# WSG_games

./: .gitignore  .pre-commit-config.yaml  README.md  playground_WSG_games.ipynb  playground_crosscoder.ipynb  setup.cfg  test.ipynb  test.py
chapter2_rl/exercises/part2_q_learning_and_policy_gradient/: 2.2_DQN_&_VPG_exercises.ipynb
checkpoints/: config.json  eval_logs_3.pt  eval_logs_6.pt  eval_logs_9.pt
data/tictactoe/: tictactoe_data.pkl
src/WSG_games/tictactoe/: data.py
src/tictactoe/: data.py  game.py  tictactoe_playground.ipynb
src/wsg_games/tictactoe/: evals.py
wsg_games/: Othello_full_notebook.ipynb  meta.py  utils.py
wsg_games/parallel_computing/: parallel_gpu_executor.py
wsg_games/tictactoe/: analyse_data.py  data.py  evals.py  game.py  script_generate_data_tictactoe.py  tictactoe_playground.ipynb
wsg_games/tictactoe/analysis/: analyse_data.py  visualize_game.py
wsg_games/tictactoe/crosscoder/: collect_activations.py  crosscoder_feature_explorer.py  crosscoder_metrics.py  script_compute_activations_finetune.py  script_compute_activations_pretrain.py  train_crosscoder.py
wsg_games/tictactoe/train/: create_models.py  finetune.py  main_create_random_models.py  main_finetune_sweep.py  main_parallel_finetune_sweep.py  main_parallel_pretrain.py  main_parallel_pretrain_sweep copy.py  main_parallel_pretrain_sweep.py  parallel_debug.py  parallel_debug_minimal.py  parallel_debug_minimal_hooks.py  pretrain.py  save_load_models.py  train.py
wsg_games/tictactoe/vibe_coding/: calculate_leakage_percentage_modified_game.py
wsgvenv/: pyvenv.cfg
