[metadata]
name = WSG_games
version = 0.1.0
author = Ben Wilopo
author_email = ben.wilop@web.de
description = "Investigate WSG"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
# Tell setuptools that our package code is under "src/".
package_dir =
    = src
packages = find:
install_requires =
    torch
python_requires = >=3.7
