[metadata]
name = WSG_games
version = 0.1.0
author = Ben Wilopo
author_email = ben.wilop@web.de
description = "Investigate WSG"
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    = src
install_requires =
    torch
python_requires = >=3.7

[options.packages.find]
where = src